<resources>

    <string name="app_name">Timekeeper</string>
    <string name="app_name_time">Time</string>
    <string name="app_name_keeper">keeper</string>

    <string name="passage_in">Passage : IN</string>
    <string name="passage_out">Passage : OUT</string>

    <!--Server activity-->
    <string name="server_address">Server address</string>
    <string name="server_configuration">Server configuration</string>

    <!--Sign in activity-->
    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>

    <!--Buttons-->
    <string name="confirm">Confirm</string>
    <string name="conf_continue">Continue</string>

    <!--Home activity-->
    <string name="activity">Activity</string>
    <string name="charts">Charts</string>

    <!--View pager-->
    <string name="today">Today</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="clockers">All clockers</string>
    <string name="settings">Settings</string>
    <string name="notification">Notification</string>
    <string name="notifications">Notifications</string>
    <string name="error_illegal_url">Error: illegal URL or bad connection</string>
    <string name="logout">Logout</string>
    <string name="logout_text">Are you sure you want to logout?</string>
    <string name="cancel">Cancel</string>

    <!--Empty layout-->
    <string name="nothing">NOTHING!!</string>
    <string name="empty_list">List is empty</string>

    <!--Chart fragment-->
    <string name="clock_in_time">Clock in time / average</string>
    <string name="clock_out_time">Clock out time / average</string>
    <string name="time_at_work">Time at work / average</string>
    <string name="time_details">See times details</string>

    <!--Error-->
    <string name="error_empty">The field cannot be empty</string>
    <string name="error_email">Incorrect Email</string>
    <string name="error_url">Incorrect URL</string>
    <string name="undefined">undefined</string>

</resources>
